test/positive/feature_lazybooleanoperations.java

public class feature_lazybooleanoperations {
  public feature_lazybooleanoperations() {}
  public boolean m(boolean x) {
    return (x && true) || x;
  }
}

