test/negative/feature_bitwiseoperations.java

public class feature_bitwiseoperations {
  public feature_bitwiseoperations() {}
  public int m(int x) {
    return ((x & x) | x) ^ x;
  }
}

